--- a/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/css/resultChart.css
+++ b/FYP_ChildAbuseGIS2013/FYP_ChildAbuseGIS2013/css/resultChart.css
@@ -1,4 +1,4 @@
-﻿#chartSlideShow, #faceAnalysis, #handMotion
+﻿#chartSlideShow, #faceAnalysis, #handMotion, #twitterAna
 {
     position: relative;
     height: 600px;
